# saigonlib

./: .gitignore  README.md
cppzmq-4.7.1/include/: zmsg.hpp
fmt-7.1.3/: build_all.bat  run-msbuild.bat  sg_build.bat
fmt-7.1.3/lib/: fmt.lib  fmt64.lib
fmt-7.1.3/lib/win32/: fmt.lib  fmtd.lib
fmt-7.1.3/lib/x64/: fmt.lib  fmtd.lib
grpc-1.39.1/: sg_build.bat
libzmq-4.3.4/: sg_build.bat
libzmq-4.3.4/lib/win32/: libzmq-v142-mt-gd-4_3_4.lib  libzmq.lib
libzmq-4.3.4/lib/x64/: libzmq.lib  libzmqd.lib
protobuf-3.17.3/cmake/: sg_build.bat
protobuf-3.17.3/protobuf/lib/win32/: libprotobuf-lite.lib
protobuf-3.17.3/protobuf/lib/x64/: libprotobuf-lite.lib
protobuf-3.17.3/protobuf/win32/lib/: libprotobuf-lite.lib
protobuf-3.17.3/protobuf/x64/lib/: libprotobuf-lite.lib
sgutils-1.0.0/: CMakeLists.txt  sg_build.bat
sgutils-1.0.0/include/sgutils/: json_reader.hpp  random_factor.hpp  random_number.hpp
sgutils-1.0.0/lib/win32/: sgutils.lib  sgutilsd.lib
sgutils-1.0.0/lib/x64/: sgutils.lib  sgutilsd.lib
sgutils-1.0.0/src/: json_reader.cpp
sgutils-1.0.0/src/sgutils/: json_reader.cpp
sgutils-1.0.0/src/tests/: CMakeLists.txt  test_json_reader.cpp
sgutils-1.0.0/src/tests/data/: 01.json
zmqpp-develop/: CMakeLists.txt  sg_build.bat
zmqpp-develop/lib/win32/: libzmq-static.lib  zmqpp-static.lib
zmqpp-develop/lib/x64/: libzmq-static.lib  zmqpp-static.lib
